@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 4b0a256055e11cf4999a9ee9e8b0db2a
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
